<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/fileET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:hint="@string/enter_file_name"
        android:importantForAutofill="no"
        android:inputType="text" />

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialogCancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/dialogOkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/ok"
            android:textColor="#FFFFFF"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>






</LinearLayout>